--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,3 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=Bebas+Neue&family=Pacifico&display=swap');
+
