--- a/src/components/HeroSection/herosection.css
+++ b/src/components/HeroSection/herosection.css
@@ -1,24 +1,14 @@
-.home {
-    background-image: url(../../assets/home-bg.png);
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position: fixed;
-  }
-  
-  
-  
-  @media (max-width: 900px) {
-      .home {
-        background-image: url(../../assets/sm-home-logo.jpeg);
-        background-size:contain;
-        background-position: fixed;
-      }
-  }
-  
-  @media (max-width: 600px) {
-      .home{
-          background-size: contain;
-          background-repeat: no-repeat;
-      }
-  }
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
 
+.hero{
+    /* background-color: rgba(255, 255, 255, 0.801); */
+    color: orangered;
+    font-family: "DynaPuff", system-ui;
+}
+
+@media (max-width : 760px) {
+    .hero{
+        flex-direction: column;
+        height: auto;
+    }
+}
