--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,8 @@ li{
 }
 
 .nav-element{
-    padding: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    z-index: 1;
 }
 
 
@@ -27,13 +28,7 @@ li{
     .nav-element{
         justify-content: space-between;
         gap: 0;
-        padding-top: 5px;
-        padding-left: 20px;
-    }
-}
-
-@media (min-width: 550px) {
-    .nav-element{
-        padding-top: 2rem;
+        /* padding-top: 5px;
+        padding-left: 20px; */
     }
 }
