--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -1,3 +1,11 @@
 .home-bg{
   background: url('../assets/burger-bg.jpg');
 }
+
+.cart-bg{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.active{
+  color: gold;
+}
